finalize first release

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">FriendlyCanvas</string>
+    <string name="app_name">Pingere</string>
     <string name="start">New</string>
 </resources>
